syntax = "proto3";

import "common/genre.proto";

option java_multiple_files = true;
option java_package = "br.com.devcave.grpc.proto.movie";

message MovieDTO {
    string title = 1;
    int32 year = 2;
    double rating = 3;
}

message MovieSearchRequest {
    common.Genre genre = 1;
}

message MovieSearchResponse {
    repeated MovieDTO movie = 1;
}

service MovieService {
    rpc getMovies(MovieSearchRequest) returns (MovieSearchResponse) {};
}
